Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-688

pn_transport_unbind() doesn't reset all relevant trasnport state

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • proton-0.8
    • proton-0.8
    • proton-c, python-binding
    • None

    Description

      Unbinding a transport on connection failure, then trying to rebind a new transport to the original connection option doesn't work as expected as not all relevant state is reset.

      Attachments

        Activity

          People

            Unassigned Unassigned
            gsim Gordon Sim
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: