PROTON-688: reset transport state on unbind

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1626165 13f79535-47bb-0310-9956-ffa450edef68